// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cache evict all entries 1`] = `"hi test1"`;

exports[`cache evict all entries 2`] = `"hi test2"`;

exports[`cache evict all entries 3`] = `"hi test3"`;

exports[`cache evict all entries 4`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 3,
    "keyList": Array [
      "test1",
      "test2",
      "test3",
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "test1" => 0,
      "test2" => 1,
      "test3" => 2,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      2,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 3,
    "sizeCalculation": undefined,
    "tail": 2,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      "hi test1",
      "hi test2",
      "hi test3",
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict all entries 5`] = `undefined`;

exports[`cache evict all entries 6`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "calculatedSize": 0,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {},
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      2,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 0,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache args object 1`] = `"hi test"`;

exports[`cache evict cache args object 2`] = `"hi test"`;

exports[`cache evict cache args object 3`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": Array [
      "{\\"name\\":\\"test\\"}",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "{\\"name\\":\\"test\\"}" => 0,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      "hi test",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache args object 4`] = `undefined`;

exports[`cache evict cache args object 5`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "calculatedSize": 0,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {},
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 0,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache condition + key 1`] = `"hi test1"`;

exports[`cache evict cache condition + key 2`] = `"hi test2"`;

exports[`cache evict cache condition + key 3`] = `"hi test3"`;

exports[`cache evict cache condition + key 4`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 3,
    "keyList": Array [
      "test1",
      "test2",
      "test3",
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "test1" => 0,
      "test2" => 1,
      "test3" => 2,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      2,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 3,
    "sizeCalculation": undefined,
    "tail": 2,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      "hi test1",
      "hi test2",
      "hi test3",
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache condition + key 5`] = `undefined`;

exports[`cache evict cache condition + key 6`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        2,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 1,
    },
    "head": 0,
    "initialFill": 3,
    "keyList": Array [
      "test1",
      "test2",
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "test1" => 0,
      "test2" => 1,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      2,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 2,
    "sizeCalculation": undefined,
    "tail": 1,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      "hi test1",
      "hi test2",
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache condition 1`] = `"hi test"`;

exports[`cache evict cache condition 2`] = `"hi test"`;

exports[`cache evict cache condition 3`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 2,
    "keyList": Array [
      "{\\"name\\":\\"test\\",\\"id\\":1}",
      "{\\"name\\":\\"test\\",\\"id\\":2}",
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "{\\"name\\":\\"test\\",\\"id\\":1}" => 0,
      "{\\"name\\":\\"test\\",\\"id\\":2}" => 1,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 2,
    "sizeCalculation": undefined,
    "tail": 1,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      "hi test",
      "hi test",
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache condition 4`] = `undefined`;

exports[`cache evict cache condition 5`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 2,
    "keyList": Array [
      "{\\"name\\":\\"test\\",\\"id\\":1}",
      "{\\"name\\":\\"test\\",\\"id\\":2}",
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "{\\"name\\":\\"test\\",\\"id\\":1}" => 0,
      "{\\"name\\":\\"test\\",\\"id\\":2}" => 1,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 2,
    "sizeCalculation": undefined,
    "tail": 1,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      "hi test",
      "hi test",
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache condition 6`] = `undefined`;

exports[`cache evict cache condition 7`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        1,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 1,
    },
    "head": 0,
    "initialFill": 2,
    "keyList": Array [
      "{\\"name\\":\\"test\\",\\"id\\":1}",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "{\\"name\\":\\"test\\",\\"id\\":1}" => 0,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      "hi test",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache key 1`] = `"hi test"`;

exports[`cache evict cache key 2`] = `"hi test"`;

exports[`cache evict cache key 3`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 2,
    "keyList": Array [
      "1",
      "2",
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "1" => 0,
      "2" => 1,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 2,
    "sizeCalculation": undefined,
    "tail": 1,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      "hi test",
      "hi test",
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache key 4`] = `undefined`;

exports[`cache evict cache key 5`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 1,
    },
    "head": 1,
    "initialFill": 2,
    "keyList": Array [
      null,
      "2",
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "2" => 1,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 1,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      null,
      "hi test",
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache muliple cachenames 1`] = `"hi test"`;

exports[`cache evict cache muliple cachenames 2`] = `"hi test"`;

exports[`cache evict cache muliple cachenames 2 1`] = `"hi test"`;

exports[`cache evict cache muliple cachenames 2 2`] = `"hi test"`;

exports[`cache evict cache muliple cachenames 2 3`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": Array [
      "test",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "test" => 0,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      "hi test",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache muliple cachenames 2 4`] = `
MemoryCache {
  "name": "hi2",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": Array [
      "test",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "test" => 0,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      "hi test",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache muliple cachenames 2 5`] = `undefined`;

exports[`cache evict cache muliple cachenames 2 6`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": Array [
      "test",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "test" => 0,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      "hi test",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache muliple cachenames 2 7`] = `
MemoryCache {
  "name": "hi2",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": Array [
      "test",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "test" => 0,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      "hi test",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache muliple cachenames 3`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": Array [
      "test",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "test" => 0,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      "hi test",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache muliple cachenames 4`] = `
MemoryCache {
  "name": "hi2",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": Array [
      "test",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "test" => 0,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      "hi test",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache muliple cachenames 5`] = `undefined`;

exports[`cache evict cache muliple cachenames 6`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": Array [
      "test",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "test" => 0,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      "hi test",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache muliple cachenames 7`] = `
MemoryCache {
  "name": "hi2",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": Array [
      "test",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "test" => 0,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      "hi test",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache unless + key + condition 1`] = `1`;

exports[`cache evict cache unless + key + condition 2`] = `2`;

exports[`cache evict cache unless + key + condition 3`] = `3`;

exports[`cache evict cache unless + key + condition 4`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 3,
    "keyList": Array [
      "1",
      "2",
      "3",
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "1" => 0,
      "2" => 1,
      "3" => 2,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      2,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 3,
    "sizeCalculation": undefined,
    "tail": 2,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      1,
      2,
      3,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache unless + key + condition 5`] = `1`;

exports[`cache evict cache unless + key + condition 6`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 3,
    "keyList": Array [
      "1",
      "2",
      "3",
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "1" => 0,
      "2" => 1,
      "3" => 2,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      2,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 3,
    "sizeCalculation": undefined,
    "tail": 2,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      1,
      2,
      3,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache unless + key + condition 7`] = `2`;

exports[`cache evict cache unless + key + condition 8`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 3,
    "keyList": Array [
      "1",
      "2",
      "3",
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "1" => 0,
      "2" => 1,
      "3" => 2,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      2,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 3,
    "sizeCalculation": undefined,
    "tail": 2,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      1,
      2,
      3,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache unless + key + condition 9`] = `3`;

exports[`cache evict cache unless + key + condition 10`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        2,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 1,
    },
    "head": 0,
    "initialFill": 3,
    "keyList": Array [
      "1",
      "2",
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "1" => 0,
      "2" => 1,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      2,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 2,
    "sizeCalculation": undefined,
    "tail": 1,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      1,
      2,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache unless + key 1`] = `1`;

exports[`cache evict cache unless + key 2`] = `2`;

exports[`cache evict cache unless + key 3`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 2,
    "keyList": Array [
      "1",
      "2",
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "1" => 0,
      "2" => 1,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 2,
    "sizeCalculation": undefined,
    "tail": 1,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      1,
      2,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache unless + key 4`] = `1`;

exports[`cache evict cache unless + key 5`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 2,
    "keyList": Array [
      "1",
      "2",
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "1" => 0,
      "2" => 1,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 2,
    "sizeCalculation": undefined,
    "tail": 1,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      1,
      2,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache unless + key 6`] = `2`;

exports[`cache evict cache unless + key 7`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        1,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 1,
    },
    "head": 0,
    "initialFill": 2,
    "keyList": Array [
      "1",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "1" => 0,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      1,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache unless 1`] = `1`;

exports[`cache evict cache unless 2`] = `2`;

exports[`cache evict cache unless 3`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 2,
    "keyList": Array [
      "{\\"name\\":\\"test\\",\\"id\\":1}",
      "{\\"name\\":\\"test\\",\\"id\\":2}",
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "{\\"name\\":\\"test\\",\\"id\\":1}" => 0,
      "{\\"name\\":\\"test\\",\\"id\\":2}" => 1,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 2,
    "sizeCalculation": undefined,
    "tail": 1,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      1,
      2,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache unless 4`] = `1`;

exports[`cache evict cache unless 5`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 2,
    "keyList": Array [
      "{\\"name\\":\\"test\\",\\"id\\":1}",
      "{\\"name\\":\\"test\\",\\"id\\":2}",
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "{\\"name\\":\\"test\\",\\"id\\":1}" => 0,
      "{\\"name\\":\\"test\\",\\"id\\":2}" => 1,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 2,
    "sizeCalculation": undefined,
    "tail": 1,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      1,
      2,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict cache unless 6`] = `2`;

exports[`cache evict cache unless 7`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        1,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 1,
    },
    "head": 0,
    "initialFill": 2,
    "keyList": Array [
      "{\\"name\\":\\"test\\",\\"id\\":1}",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "{\\"name\\":\\"test\\",\\"id\\":1}" => 0,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      1,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict errors error on condition 1`] = `"hi test test"`;

exports[`cache evict errors error on condition 2`] = `"hi test test"`;

exports[`cache evict errors error on condition 3`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {},
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 0,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict errors error on condition 4`] = `"hi test2 test2"`;

exports[`cache evict errors error on condition 5`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {},
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 0,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict errors error on key 1`] = `"hi test test"`;

exports[`cache evict errors error on key 2`] = `"hi test test"`;

exports[`cache evict errors error on key 3`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {},
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 0,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict errors error on key 4`] = `"hi test2 test2"`;

exports[`cache evict errors error on key 5`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {},
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 0,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict simple cache 1`] = `"hi test test"`;

exports[`cache evict simple cache 2`] = `"hi test test"`;

exports[`cache evict simple cache 3`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": Array [
      "testtest",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "testtest" => 0,
    },
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      "hi test test",
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`cache evict simple cache 4`] = `undefined`;

exports[`cache evict simple cache 5`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 8,
  },
  "store": LRUCache {
    "allowStale": false,
    "calculatedSize": 0,
    "disposeAfter": null,
    "disposed": null,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {},
    "max": 8,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 0,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
}
`;
